--- a/about/index.html
+++ b/about/index.html
@@ -126,7 +126,7 @@
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><figure>
     <img src="https://tdayeni.github.io/Portfolio/images/standing.JPG"/> <figcaption>
-            <h4>Moi</h4>
+            <h4>Daniel Ayeni</h4>
         </figcaption>
 </figure>
 
