updated the about me page

--- a/about/index.html
+++ b/about/index.html
@@ -130,25 +130,29 @@
       <img src="https://tdayeni.github.io/Portfolio/images/standing.JPG" alt="Daniel Ayeni" />
       <figcaption>
         <h5>Surveying V&A East Museum at Queen Elizabeth Olympic Park (left). A Geological survey of Aphrodite's Beach
-        in Cyprus (right).</h5>
+          in Cyprus (right).</h5>
       </figcaption>
     </figure>
 
     <p>
-      I’m Daniel Ayeni, currently a surveyor transitioning into a career as a data engineer. Through dedicated
-      self-learning and project work, I’ve developed strong expertise in cloud-based data engineering, focusing on
-      building scalable data pipelines and leveraging tools like <strong>Python</strong>, <strong>SQL</strong>, and
-      <strong>Apache Spark</strong>.
+      I am a versatile professional with a strong foundation in data engineering, GIS, and a range of soft skills
+      developed through diverse roles. With a background in <strong>Geology</strong> (BSc) from the University of Hull
+      and an <strong>MSc in GIS and Computing</strong> from University College London, I have gained deep technical
+      expertise in geospatial data analysis, Python, SQL, and cloud technologies. My hands-on experience as a
+      <strong>GIS Engineer</strong> and <strong>Surveyor</strong> has involved topographic surveys, database management,
+      and quality assurance, allowing me to handle complex projects with accuracy and precision.
     </p>
 
     <p>
-      My experience spans real-time data processing, machine learning, and geospatial analysis, gained from projects
-      like the <strong>Pinterest Data Pipeline</strong> and <strong>Multinational Retail Database</strong>.
+      In addition to my technical skills, my experience as a <strong>Concierge</strong> and in various <strong>security
+        roles</strong> has significantly enhanced my communication, leadership, and customer service abilities. Leading
+      teams in different settings, adapting to challenges, and consistently maintaining high standards of service has
+      enabled me to excel in building relationships and solving problems efficiently.
     </p>
 
     <p>
-      With my foundation in surveying and geospatial sciences, paired with new technical skills in data engineering, I’m
-      eager to contribute to solving complex data challenges and driving business insights.
+      This blend of technical knowledge and soft skills, gained through fieldwork and working in fast-paced
+      environments, allows me to confidently manage both data and people in any project I take on.
     </p>
 
   </section>
@@ -158,6 +162,7 @@
   </section>
 
 </article>
+
 
 
     </main>
